[gd_scene load_steps=2 format=3 uid="uid://ds2ckdi8mx7wh"]

[ext_resource type="Script" uid="uid://dgtawhp8bpsmf" path="res://scripts/OrderCard.gd" id="1"]

[node name="OrderCard" type="Panel"]
custom_minimum_size = Vector2(220, 64)
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LabelClient" type="Label" parent="VBox"]
layout_mode = 2
text = "Клиент"

[node name="LabelProd" type="Label" parent="VBox"]
layout_mode = 2
text = "Продукт"
